testsuite/tests/rename/should_compile/T4240B.hs

module T4240B (m) where

import T4240A

