testsuite/tests/rename/should_fail/T13644A.hs
module T13644A
(
  FuncId(FuncId)
, module X
)
where

import T13644C as X

import T13644B
